[package]
name = "mini-telnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.18"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["time", "net", "io-util"] }
tokio-util = { version = "0.6.9", features = ["codec"] }

