[package]
name = "mini-telnet"
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/kolapapa/mini-telnet"
description = "Asynchronous minimal telnet library"
keywords = ["tokio", "telnet"]
categories = ["network-programming", "asynchronous"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.19"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["time", "net", "io-util"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
encoding = "0.2.33"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }

[[example]]
name = "simple"
