[package]
name = "mini-telnet"
version = "0.1.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/kolapapa/mini-telnet"
description = "Asynchronous minimal telnet library"
keywords = ["tokio", "telnet"]
categories = ["network-programming", "asynchronous"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["time", "net", "io-util"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
encoding = "0.2.33"
regex = "1.5.5"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }

[[example]]
name = "simple"
